fixed the alignement issues and the incorrect type issue in the json visualizer

--- a/src/components/NodeConfigSidebar/NodeConfigSidebar.css
+++ b/src/components/NodeConfigSidebar/NodeConfigSidebar.css
@@ -376,7 +376,6 @@
   padding: 0 .3rem;
 }
 .vp-preview {
-  margin-top: .2rem;
   color: var(--text-secondary);
   font-size: .8rem;
   padding-left: .15rem;
